--- a/K53_Rules_Test/road_rules_test4.html
+++ b/K53_Rules_Test/road_rules_test4.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -101,7 +101,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -176,7 +176,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -253,7 +253,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -330,7 +330,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -374,7 +374,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -449,7 +449,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -526,7 +526,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -603,7 +603,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -680,7 +680,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -757,7 +757,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -802,7 +802,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -869,7 +869,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -946,7 +946,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1022,7 +1022,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1099,7 +1099,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1176,7 +1176,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1220,7 +1220,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1317,7 +1317,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
     <div class="container">
       <div id="branding2">
         <h1><a ><span id="time"></span></a></h1>
@@ -1403,7 +1403,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1479,7 +1479,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1556,7 +1556,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1632,7 +1632,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1678,7 +1678,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1746,7 +1746,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1823,7 +1823,7 @@
     <h3>Question 22 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1900,7 +1900,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1976,7 +1976,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2052,7 +2052,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2097,7 +2097,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2172,7 +2172,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2249,7 +2249,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2326,7 +2326,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2403,7 +2403,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2449,7 +2449,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2518,7 +2518,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -3094,6 +3094,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
