--- a/K53_Rules_Test/road_rules_test5.html
+++ b/K53_Rules_Test/road_rules_test5.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -102,7 +102,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -177,7 +177,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -254,7 +254,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -331,7 +331,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -375,7 +375,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -449,7 +449,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -526,7 +526,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -603,7 +603,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -680,7 +680,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -757,7 +757,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -803,7 +803,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -870,7 +870,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -947,7 +947,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1023,7 +1023,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1100,7 +1100,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1177,7 +1177,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1221,7 +1221,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1319,7 +1319,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
     <div class="container">
       <div id="branding2">
         <h1><a ><span id="time"></span></a></h1>
@@ -1405,7 +1405,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1481,7 +1481,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1558,7 +1558,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1634,7 +1634,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1680,7 +1680,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1750,7 +1750,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1827,7 +1827,7 @@
     <h3>Question 22 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1904,7 +1904,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1980,7 +1980,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2056,7 +2056,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2101,7 +2101,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2175,7 +2175,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2252,7 +2252,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2329,7 +2329,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2406,7 +2406,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2452,7 +2452,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2522,7 +2522,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -3097,6 +3097,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
