--- a/K53_Sign_Test/variable_message_signs.html
+++ b/K53_Sign_Test/variable_message_signs.html
@@ -366,6 +366,8 @@
 
 
  <script type="text/javascript">
-
+var variable_message_signs = 1; 
+		localStorage.setItem("variable_message_signs", variable_message_signs);
 
  </script>
+
