--- a/K53_Sign_Test/guidance_signs.html
+++ b/K53_Sign_Test/guidance_signs.html
@@ -158,6 +158,13 @@
 
 
  <script type="text/javascript">
-
+    // location_signs
+    const location_signs = Number(localStorage.getItem("location_signs")) || 0;
+	
+	if (location_signs > 0)
+	{
+		document.getElementById("1").style.width = "100px";
+	}
 
  </script>
+
